[gd_scene load_steps=10 format=3 uid="uid://br0h18fqmirga"]

[ext_resource type="PackedScene" uid="uid://fivay0tb8yky" path="res://nodes/player.tscn" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://yg5mhbm6w5rx" path="res://base/main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://deys43et4bw2g" path="res://nodes/boss.tscn" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://dvs7vr0140cts" path="res://sprites/20250701_1549_Gef√§hrlicher Holz-Mauszeiger_simple_compose_01jz33y5e5ez0b2a6b4v6w0s3z.png" id="3_pmn7o"]
[ext_resource type="Texture2D" uid="uid://dkf506f3owsi7" path="res://sprites/background/732f46d3-d54d-4bd8-8908-1d4c9f4118b4.jpg" id="4_1bvp3"]
[ext_resource type="Texture2D" uid="uid://cy6jijhabrfqu" path="res://sprites/Control/ChatGPT Image 3. Juni 2025, 19_34_10.png" id="6_6s2ku"]
[ext_resource type="PackedScene" uid="uid://5np555wkfose" path="res://nodes/skill_tooltip.tscn" id="6_sybi7"]
[ext_resource type="Script" uid="uid://v0mw2pepavjy" path="res://base/LootManager.gd" id="7_6s2ku"]
[ext_resource type="Texture2D" uid="uid://dq58gh83s6cs5" path="res://sprites/Control/20250607_1732_Medieval Play Button_simple_compose_01jx5g9wasfajbqbp39cnk9nts.png" id="8_gp064"]

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
player_scene = ExtResource("1_0xm2m")
custom_cursor_texture = ExtResource("3_pmn7o")

[node name="Player" parent="." instance=ExtResource("1_0xm2m")]
top_level = true
position = Vector2(216, 430)

[node name="Boss" parent="." instance=ExtResource("2_h2yge")]
position = Vector2(1008, 304)

[node name="TestTimer" type="Timer" parent="."]

[node name="Turn Counter" type="Button" parent="."]
offset_left = 800.0
offset_top = 437.0
offset_right = 973.0
offset_bottom = 497.0
text = "Single Turn"

[node name="GameOver" type="Window" parent="."]
auto_translate_mode = 1
mode = 3
title = "You Died"
initial_position = 2
size = Vector2i(500, 500)
visible = false

[node name="Label" type="RichTextLabel" parent="GameOver"]
offset_right = 498.0
offset_bottom = 358.0
text = "Game Over"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="GameOver"]
offset_left = 146.0
offset_top = 373.0
offset_right = 354.0
offset_bottom = 438.0
text = "CONFIRM"

[node name="Hintergrundbild" type="Sprite2D" parent="."]
z_index = -10
position = Vector2(576, 324)
scale = Vector2(1.125, 0.632813)
texture = ExtResource("4_1bvp3")

[node name="SkillTooltip" parent="." instance=ExtResource("6_sybi7")]
offset_left = -99.0
offset_top = -74.0
offset_right = -29.0
offset_bottom = -14.0

[node name="Win" type="Button" parent="."]
visible = false
z_index = 2000
offset_left = 418.0
offset_top = 176.0
offset_right = 1962.0
offset_bottom = 1208.0
scale = Vector2(0.25, 0.25)
icon = ExtResource("6_6s2ku")

[node name="LootManager" type="Node2D" parent="."]
script = ExtResource("7_6s2ku")

[node name="Autobattle" type="Button" parent="."]
offset_left = 510.0
offset_top = 410.0
offset_right = 1414.0
offset_bottom = 1440.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("8_gp064")

[connection signal="press" from="." to="Player" method="_on_main_press"]
[connection signal="press" from="." to="Boss" method="_on_main_press"]
[connection signal="dead" from="Player" to="." method="_on_player_dead"]
[connection signal="pressed" from="Turn Counter" to="." method="_on_turn_counter_pressed"]
[connection signal="pressed" from="Turn Counter" to="Player" method="_on_button_pressed"]
[connection signal="pressed" from="Turn Counter" to="Boss" method="_on_button_pressed"]
[connection signal="pressed" from="GameOver/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GameOver/Button" to="Player" method="_on_game_over_button_pressed"]
[connection signal="pressed" from="Win" to="." method="_on_win_pressed"]
[connection signal="pressed" from="Autobattle" to="." method="_on_autobattle_pressed"]
